chore(config): Add `config-claude.sh` for automatic Claude Desktop setup, including Java detection, project path configuration, and MCP server validation. Update README with usage instructions and additional learning resources.